--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <header>
     <h1> Dia Mundial de Conscientização da Violência contra a Pessoa Idosa
-      <br><button onclick="window.location.href='sobre.html'" > sobre</button>
+      <br>
+      <button onclick="window.location.href='index.html'" > Home</button>
+      <button onclick="window.location.href='sobre.html'" > sobre</button>
       <button onclick="window.location.href='dados.html'"> dados</button>
       <button onclick="window.location.href='noticias.html'"> noticias</button>
       <button  onclick="window.location.href='casos.html'"> casos</button>
