--- a/noticias.html
+++ b/noticias.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1> Dia Mundial de Conscientização da Violência contra a Pessoa Idosa
+          <br>
+          <button onclick="window.location.href='index.html'" > Home</button>
+          <button onclick="window.location.href='sobre.html'" > sobre</button>
+          <button onclick="window.location.href='dados.html'"> dados</button>
+          <button onclick="window.location.href='noticias.html'"> noticias</button>
+          <button  onclick="window.location.href='casos.html'"> casos</button>
+        </h1>
+      </header>
     <main>
             <button onclick="window.location.href='index.html'" > voltar</button>
             <h2>Violência contra idosos cresce 97% no 1º trimestre de 2023</h2><br><p>O Brasil registrou aumento de 97% no número de violações de direitos humanos contra pessoas idosas no primeiro trimestre de 2023. Ao todo, o país somou 202,3 mil casos de violência entre janeiro e março deste ano. Em comparação, o mesmo período do ano anterior somou 102,8 mil de infrações. <br> O mês com o maior número de registros foi janeiro, com 72,1 mil de casos de violência contra idosos denunciados à ouvidoria. Em relação ao ano anterior, o dado representou uma alta de 107%. Já em março, os casos caíram para 69,4 mil registros, mas a informação ainda é 87% maior do que o mesmo mês em 2022.</p>
