--- a/casos.html
+++ b/casos.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1> Dia Mundial de Conscientização da Violência contra a Pessoa Idosa
+          <br>
+          <button onclick="window.location.href='index.html'" > Home</button>
+          <button onclick="window.location.href='sobre.html'" > sobre</button>
+          <button onclick="window.location.href='dados.html'"> dados</button>
+          <button onclick="window.location.href='noticias.html'"> noticias</button>
+          <button  onclick="window.location.href='casos.html'"> casos</button>
+        </h1>
+      </header>
     <main>
         <figure>
             <button onclick="window.location.href='index.html'" > voltar</button>
